[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Moulay Driss EL ALAOUI FARIS <elalaouifaris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.5"
djangorestframework = "^3.12.4"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
django-pytest = "^0.2.0"
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
