[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Moulay Driss EL ALAOUI FARIS <elalaouifaris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.5"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
